# pico-gpt

./: .gitignore  README.md  pyproject.toml  scripts.py
pico_gpt/: __main__.py  encoder.py  utils.py
